--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="golf,putting,world rankings" data-listing-date-sort="1713070800000" data-listing-file-modified-sort="1712951668247" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4" data-listing-word-count-sort="637">
+<div class="quarto-post image-right" data-index="0" data-categories="golf,putting,world rankings" data-listing-date-sort="1713070800000" data-listing-file-modified-sort="1713141566025" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1182">
 <div class="thumbnail">
 <p><a href="./posts/are-good-putters-the-best-golfers/index.html" class="no-external"></a></p><a href="./posts/are-good-putters-the-best-golfers/index.html" class="no-external">
 <p><img src="./posts/are-good-putters-the-best-golfers/image.png" class="thumbnail-image"></p>
@@ -213,7 +213,7 @@ window.Quarto = {
 </div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./posts/are-good-putters-the-best-golfers/index.html" class="no-external">Does being a top ranked putter equate to PGA tournament success?</a>
+<a href="./posts/are-good-putters-the-best-golfers/index.html" class="no-external">Does being great at putting equate to PGA tournament success?</a>
 </h3>
 <div class="listing-subtitle">
 <a href="./posts/are-good-putters-the-best-golfers/index.html" class="no-external"></a>
@@ -230,7 +230,7 @@ world rankings
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/are-good-putters-the-best-golfers/index.html" class="no-external">text here……</a>
+<a href="./posts/are-good-putters-the-best-golfers/index.html" class="no-external">There is a famous expression in the world of golf; drive for show, putt for dough. Does this expression hold any weight or is it just something people say when they top…</a>
 </div>
 </div>
 <div class="metadata">
