--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="golf">golf <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(1)</span></div><div class="category" data-category="putting">putting <span class="quarto-category-count">(1)</span></div><div class="category" data-category="world rankings">world rankings <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="Baseball">Baseball <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Nebraska">Nebraska <span class="quarto-category-count">(1)</span></div><div class="category" data-category="golf">golf <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(1)</span></div><div class="category" data-category="putting">putting <span class="quarto-category-count">(1)</span></div><div class="category" data-category="world rankings">world rankings <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -205,7 +205,43 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="golf,putting,world rankings" data-listing-date-sort="1713070800000" data-listing-file-modified-sort="1713141566025" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1182">
+<div class="quarto-post image-right" data-index="0" data-categories="Nebraska,Baseball" data-listing-date-sort="1714971600000" data-listing-file-modified-sort="1714952823130" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="870">
+<div class="thumbnail">
+<p><a href="./posts/nebraska-baseball-2024-2021-2005/index.html" class="no-external"></a></p><a href="./posts/nebraska-baseball-2024-2021-2005/index.html" class="no-external">
+<p><img src="./posts/nebraska-baseball-2024-2021-2005/image.png" class="thumbnail-image"></p>
+</a><p><a href="./posts/nebraska-baseball-2024-2021-2005/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/nebraska-baseball-2024-2021-2005/index.html" class="no-external">Is the 2024 Husker baseball team the best one since 2005?</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/nebraska-baseball-2024-2021-2005/index.html" class="no-external"></a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('Nebraska'); return false;">
+Nebraska
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('Baseball'); return false;">
+Baseball
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/nebraska-baseball-2024-2021-2005/index.html" class="no-external">The University of Nebraska’s baseball team has not made it back to the College World Series since the 2005 season with Alex Gordon leading the them to Omaha. Why is that? Have</a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/nebraska-baseball-2024-2021-2005/index.html" class="no-external">
+<div class="listing-date">
+May 6, 2024
+</div>
+<div class="listing-author">
+Sage Schulte
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="golf,putting,world rankings" data-listing-date-sort="1713070800000" data-listing-file-modified-sort="1713141566025" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1182">
 <div class="thumbnail">
 <p><a href="./posts/are-good-putters-the-best-golfers/index.html" class="no-external"></a></p><a href="./posts/are-good-putters-the-best-golfers/index.html" class="no-external">
 <p><img src="./posts/are-good-putters-the-best-golfers/image.png" class="thumbnail-image"></p>
@@ -244,7 +280,7 @@ Sage Schulte
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="news" data-listing-date-sort="1711429200000" data-listing-file-modified-sort="1711741032578" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
+<div class="quarto-post image-right" data-index="2" data-categories="news" data-listing-date-sort="1711429200000" data-listing-file-modified-sort="1711741032578" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
 <div class="thumbnail">
 <p><a href="./posts/introduction/index.html" class="no-external"></a></p><a href="./posts/introduction/index.html" class="no-external">
 <div class="listing-item-img-placeholder card-img-top" >&nbsp;</div>
