--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="Nebraska,Baseball" data-listing-date-sort="1714971600000" data-listing-file-modified-sort="1714952823130" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="870">
+<div class="quarto-post image-right" data-index="0" data-categories="Nebraska,Baseball" data-listing-date-sort="1714971600000" data-listing-file-modified-sort="1714955549076" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7" data-listing-word-count-sort="1296">
 <div class="thumbnail">
 <p><a href="./posts/nebraska-baseball-2024-2021-2005/index.html" class="no-external"></a></p><a href="./posts/nebraska-baseball-2024-2021-2005/index.html" class="no-external">
 <p><img src="./posts/nebraska-baseball-2024-2021-2005/image.png" class="thumbnail-image"></p>
@@ -227,7 +227,7 @@ Baseball
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/nebraska-baseball-2024-2021-2005/index.html" class="no-external">The University of Nebraska’s baseball team has not made it back to the College World Series since the 2005 season with Alex Gordon leading the them to Omaha. Why is that? Have</a>
+<a href="./posts/nebraska-baseball-2024-2021-2005/index.html" class="no-external">The University of Nebraska’s baseball team has not made it back to the College World Series since the 2005 season with Alex Gordon leading them to Omaha. Why is that? Have…</a>
 </div>
 </div>
 <div class="metadata">
